# hello-django

./: package-lock.json  package.json  pyproject.toml
hellodjango/: settings.py  urls.py
hellodjango_app/: apps.py  views.py
templates/: index_view.html
