[tool.poetry]
name = "hello-django"
version = "0.1.0"
description = ""
authors = ["Lorenzo Ginyard <lnginyard@gmail.kenzie.academy.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
